--- a/NVMeFix.kext/Contents/Info.plist
+++ b/NVMeFix.kext/Contents/Info.plist
@@ -7,27 +7,27 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>SMCBatteryManager</string>
+	<string>NVMeFix</string>
 	<key>CFBundleIdentifier</key>
-	<string>ru.usrsse2.SMCBatteryManager</string>
+	<string>org.acidanthera.NVMeFix</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>SMCBatteryManager</string>
+	<string>NVMeFix</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.0</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.0.0</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>11C504</string>
+	<string>11C29</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
@@ -37,30 +37,17 @@
 	<key>DTXcode</key>
 	<string>1130</string>
 	<key>DTXcodeBuild</key>
-	<string>11C504</string>
+	<string>11C29</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>IOSMBusController</key>
+		<key>org.acidanthera.NVMeFix</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>ru.usrsse2.SMCBatteryManager</string>
+			<string>org.acidanthera.NVMeFix</string>
 			<key>IOClass</key>
-			<string>SMCSMBusController</string>
+			<string>NVMeFix</string>
 			<key>IOMatchCategory</key>
-			<string>SMCSMBusController</string>
-			<key>IOProviderClass</key>
-			<string>IOResources</string>
-			<key>IOResourceMatch</key>
-			<string>IOKit</string>
-		</dict>
-		<key>SMCBatteryManager</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>ru.usrsse2.SMCBatteryManager</string>
-			<key>IOClass</key>
-			<string>SMCBatteryManager</string>
-			<key>IOMatchCategory</key>
-			<string>SMCBatteryManager</string>
+			<string>NVMeFix</string>
 			<key>IOProviderClass</key>
 			<string>IOResources</string>
 			<key>IOResourceMatch</key>
@@ -68,21 +55,15 @@
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.8</string>
+	<string>10.14</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018 usrsse2. All rights reserved.</string>
+	<string>Copyright © 2019 acidanthera. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
-	<string>1.0.0</string>
+	<string>1.0</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
-		<string>1.2.0</string>
-		<key>as.vit9696.VirtualSMC</key>
-		<string>1.0.0</string>
-		<key>com.apple.iokit.IOACPIFamily</key>
-		<string>1.0.0d1</string>
-		<key>com.apple.iokit.IOSMBusFamily</key>
-		<string>1.0.0</string>
+		<string>1.4.1</string>
 		<key>com.apple.kpi.bsd</key>
 		<string>12.0.0</string>
 		<key>com.apple.kpi.dsep</key>
